# simulacao_discreta

./: aula.py  aux.py  distribuicoes.py  main.py  manipulate.py  pyproject.toml
estatistica_aux.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
