[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "estatistica-aux"
version = "0.1.0"
description = "Biblioteca auxiliar para detecção de outliers e cálculos estatísticos"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Luiz Moreira", email = "luizmoreira@duck.com" }
]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
py-modules = ["aux"]